mongo-spring 연결 완료

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -11,11 +11,17 @@ spring.datasource.password=1234
 #spring.datasource.username=admin
 #spring.datasource.password=dhwjdgh1102
 
+#mongo
+spring.data.mongodb.uri=mongodb+srv://engh0205:dhwjdgh1102@stockcluster.m2fm1sr.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=test
+
 #
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.messages.encoding=UTF-8
 #
+
+
 ##File Info
 #file.upload-dir=/Users/oduho/Desktop/Clone_SpringBoot-react-aws_Blog/Board/board_spring/src/main/resources/static
 #spring.servlet.multipart.max-file-size=100MB
