--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
-
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.mongodb:mongodb-driver-sync:4.9.1'
 	// com.sun.xml.bind
 	implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
 	implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
