--- a/StockApp/StockApp/package.json
+++ b/StockApp/StockApp/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/datetimepicker": "^7.5.0",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
