--- a/StockApp/StockApp/package.json
+++ b/StockApp/StockApp/package.json
@@ -17,14 +17,16 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "rn-fetch-blob": "^0.12.0",
+    "unlink": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
