사진 접근 허용

--- a/StockApp/StockApp/ios/StockApp/Info.plist
+++ b/StockApp/StockApp/ios/StockApp/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<!-- 추가한 부분 -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to let you select profile pictures.</string>
+
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to let you take profile pictures.</string>
+
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We need access to your photo library to let you save pictures.</string>
+
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
