--- a/StockApp/StockApp/package.json
+++ b/StockApp/StockApp/package.json
@@ -18,8 +18,10 @@
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "^0.72.4",
+    "react-native-calendars": "^1.1301.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-picker": "^7.0.0",
     "react-native-safe-area-context": "^4.7.2",
