검색어 로직 구현

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.messages.encoding=UTF-8
 
 
 ##File Info
-file.upload-dir="IPO/"
+file.upload-dir=IPO/
 #spring.servlet.multipart.max-request-size=100MB
 #
 ##AWS_S3 Access
