로그아웃 / redis 수정중

--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -15,12 +15,13 @@ spring.datasource.password=dhwjdgh1102
 spring.data.mongodb.uri=mongodb+srv://engh0205:dhwjdgh1102@stockcluster.m2fm1sr.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=test
 
-#
+#encoding
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.messages.encoding=UTF-8
-#
-
+#redis
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
 
 ##File Info
 file.upload-dir=IPO/
