--- a/StockApp/StockApp/package.json
+++ b/StockApp/StockApp/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.5.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "^0.72.4",
     "react-native-calendars": "^1.1301.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
@@ -29,6 +31,7 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2",
     "rn-fetch-blob": "^0.12.0",
     "unlink": "^0.0.2",
